--- a/report/BPEL.tex
+++ b/report/BPEL.tex
@@ -93,7 +93,7 @@ Table \ref{BPELengines} represents several common BPEL engines developed by vari
 						\addlinespace[0.2cm]
 {\bf Name of BPEL Engine} 	& {\bf Supported BPEL Version} 	& {\bf License} 	\\
 						\cmidrule(l){1-3}
-ActiveBPEL         		& BPEL4WS 1.1, WS-BPEL 2.0 	& GPL and commercial 	\\[0,1cm]
+ActiveBPEL         		& BPEL4WS 1.1, WS-BPEL 2.0 	& GPL and comm. 	\\[0,1cm]
 Apache ODE         		& WS-BPEL 2.0 			& Apache license	\\[0,1cm]
 jBMP (jBoss)         		& WS-BPEL 2.0 			& LGPL			\\[0,1cm]
 Open ESB (Oracle)		& WS-BPEL 2.0 			& Open Source		\\[0,1cm] 
