--- a/report/MethodologicalApproach.tex
+++ b/report/MethodologicalApproach.tex
@@ -53,8 +53,8 @@ Once defined the methodology to be applied, we can sketch, as represented in Fig
 \end{figure}
 On the upper part of the picture there are represented the inputs we have to provide in order to start the transformation. Namely, on the upper left there are represented the BPEL model of the process we want to transform in a Java application and the BPEL meta-model that will allow the parameterization of the elements. 
 On the upper right there are the Java templates which define the structure of the final application. It is here that we define the hierarchy of objects and the inheritance strategies. It these templates we also determine where the dynamic elements taken from the BPEL model should be placed.  
-In the center, we have the Model-to-text generator. This component will mash the information from the parameterized input model with the Java templates to finally output a runnable Java application. This output application, written in Java code, should be able to mimic the orchestration logic played by the BPEL process given as input.  
-
+In the center, we have the Model-to-text generator. This component will mash the information from the parameterized input model with the Java templates to finally output a runnable Java application. This output application, written in Java code (represented at the bottom) should be able to mimic the orchestration logic played by the BPEL process given as input.  
+Later in the report we also explain where and how the developer's intervention should be added on.
 
 
 
