--- a/report/ModelDrivenApproaches.tex
+++ b/report/ModelDrivenApproaches.tex
@@ -40,7 +40,7 @@ They individuate the main rules that compose a model transformation; these rules
 
 \subsubsection{Model-to-Model and Model-to-Text transformations}
 \label{m2m&m2t}
-Depending on the kind of source model\footnote{other techniques, not model-based (XML document to XML document, Text-to-Binaries, etc.), can also be abstracted under the generic type of model transformations \cite{M2TandM2M}}, there are two kinds of transformations \cite{Papa11}: \textbf{Model-to-Model} and \textbf{Model-to-Text} (or Model-to-Code, when the output text is a programming language syntax.). Both the transformations can be implemented in two ways \cite{M2TandM2M}:
+Depending on the kind of source model\footnote{other techniques, not model-based (XML document to XML document, Text-to-Binaries, etc.), can also be abstracted under the generic type of model transformations \cite{M2TandM2M}}, there are two possible transformations \cite{Papa11}: \textbf{Model-to-Model} and \textbf{Model-to-Text} (or Model-to-Code, when the output text is a programming language syntax.). Both the transformations can be implemented in two ways \cite{M2TandM2M}:
 \begin{itemize}
  \item Using a model Domain-Specific Modeling Language (DSML)
  \item Using a General Purpose Language (GPL), e.g. Java, C\#
