--- a/report/references.bib
+++ b/report/references.bib
@@ -1,8 +1,15 @@
 % References
+@Misc{ acceleoDoc,
+	title = "Acceleo Documentation",
+	author = "Acceleo Team",
+	howpublished = "\url{http://help.eclipse.org/indigo/index.jsp?nav=%2F5}",
+	year = "2012",
+	note = "[Online; accessed 31-August-2012]"
+}
 
 @Misc{ acceleoForum,
 	title = "Acceleo Official Forum",
-	author = "Acceleo Developers",
+	author = "Acceleo Team",
 	howpublished = "\url{http://stackoverflow.com/questions/tagged/acceleo}",
 	year = "2012",
 	note = "[Online; accessed 28-August-2012]"
