--- a/report/ModelDrivenApproaches.tex
+++ b/report/ModelDrivenApproaches.tex
@@ -84,7 +84,8 @@ To give a real example of meta-model, Figure \ref{BPELEcoreExample} represents a
 \subsubsection{The Eclipse Modeling Framework (EMF)}
 \label{EMF}
 Among the languages and frameworks that provide tools and techniques to manage models, the Eclipse Modeling Framework is surely one of the most widespread. 
-EMF is a modeling framework and code generator created by the Eclipse Foundation. It provides facilities to define models (written in any modeling language such as XML, UML, etc.), transform these models in other type of models and, last but not least, generate code from the models. The final aim of EMF would be that "modeling and programming can be considered the same thing" \cite{Steinberg2009EMF}. The meta-model used by EMF to describe any model is called Ecore and has itself, recursively, a meta-meta-model defining its parts. 
+EMF is a modeling framework and code generator created by the Eclipse Foundation. It provides facilities to define models (written in any modeling language such as XML, UML, etc.), transform these models in other type of models and, last but not least, generate code from the models. The final aim of EMF would be that "modeling and programming can be considered the same thing" \cite{Steinberg2009EMF}. 
+The meta-model used by EMF to describe any model is called Ecore and has itself, recursively, a meta-meta-model defining its parts. 
 
 One of the most important characteristic of EMF is that it fully supports XML Metadata Interchange (XMI) serialization. XMI can be thought as a way to save models in XML, yet it is much more powerful than that: it shows how to save any MOF-based meta-model in XML \cite{XMIandMOF}. The of XMI serialization's success is that it takes advantage of the dominance in the software design world of UML (which has a MOF meta-model) and the widespread usage of XML. It practically permits to export models and make them usable on several modeling frameworks and languages; it also act like a bridge between transformations from an input model to a different output model.
 
