--- a/report/references.bib
+++ b/report/references.bib
@@ -40,7 +40,7 @@
 }
 
 @Book{ Steinberg2009EMF,
- author = "Steinberg David and Budinsky Frank and Paternostro Marcelo and Merks Ed}",
+ author = "David Steinberg and Frank Budinsky and Marcelo Paternostro and Ed Merks",
  title = "EMF: Eclipse Modeling Framework 2.0",
  year = "2009",
  isbn = "0321331885",
